Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138195

Android deprecation failure

    XMLWordPrintable

Details

    • Android

    Description

      Hi,

      Since https://codereview.qt-project.org/c/qt/qtdeclarative/+/657286

      Android fails to compile with deprecated up to 0x070000

      This is because https://codereview.qt-project.org/c/qt/qtdeclarative/+/657286/5/src/qml/qml/qqmlfile.cpp#28 wraps the variables under deprecation, but https://codereview.qt-project.org/c/qt/qtdeclarative/+/657286/5/src/qml/qml/qqmlfile.cpp#510 does not.

       
      error: use of undeclared identifier 'assets_string'; did you mean 'file_string'?
       
      510 | } else if (scheme.length() == 6 && 0 == scheme.compare(QLatin1String(assets_string), Qt::CaseInsensitive)) { 
       
       
      : error: use of undeclared identifier 'content_string'
       
      559 | url.startsWith(QLatin1String(content_string), Qt::CaseInsensitive) &&

       

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            reg31 Regis Duflaut
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:

              Gerrit Reviews

                There are no open Gerrit changes