QtQml: Fix deprecations in qqmlfile.cpp

Don't warn about using deprecated methods in other deprecated methods.
Move the android specific string constants out of the deprecated block.

Amends commit 5aa3a90d2ef7c8e230e62612e0997367e765a8d6

Fixes: QTBUG-138195
Change-Id: Ifd2b07e1e80644044d39112a27a6b1b2bc5433b0
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>